cabal-version:      2.4
name:               time-conv
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.6 || ==9.6.2

copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/time-conv/
bug-reports:        https://github.com/tbidne/time-conv/issues
synopsis:           A utility program for converting between timezones.
description:
  A utility program for converting between timezones.
  Please see the README at https://github.com/tbidne/time-conv/#readme

category:           Time, Shell scripting
extra-source-files:
  CHANGELOG.md
  examples/config.toml
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/time-conv

common common-lang
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

library
  import:           common-lang
  exposed-modules:
    Data.Time.Conversion
    Data.Time.Conversion.Internal
    Data.Time.Conversion.Types.Date
    Data.Time.Conversion.Types.Date.Internal
    Data.Time.Conversion.Types.Exception
    Data.Time.Conversion.Types.TimeFormat
    Data.Time.Conversion.Types.TimeReader
    Data.Time.Conversion.Types.TZDatabase

  build-depends:
    , base                  >=4.14.0.0 && <4.19
    , containers            ^>=0.6.3.1
    , data-default          >=0.2      && <0.8
    , deepseq               >=1.4.4.0  && <1.6
    , effectful-core
    , exceptions-effectful  ^>=0.1
    , optics-core           ^>=0.4
    , text                  >=1.2.3.2  && <2.1
    , time                  >=1.9.3    && <1.14
    , time-effectful        ^>=0.1
    , tz                    ^>=0.1.3.3

  hs-source-dirs:   src
  default-language: Haskell2010

library time-conv-exe-internal
  import:           common-lang
  other-modules:    Paths_time_conv
  autogen-modules:  Paths_time_conv
  exposed-modules:
    TimeConv.Args
    TimeConv.Runner
    TimeConv.Toml

  build-depends:
    , base
    , containers
    , data-default
    , effectful-core
    , exceptions-effectful
    , fs-effectful          ^>=0.1
    , optics-core
    , optics-th             ^>=0.4
    , optparse-applicative  >=0.16.1.0 && <0.19
    , optparse-effectful    ^>=0.1
    , terminal-effectful    ^>=0.1
    , text
    , time
    , time-conv
    , time-effectful
    , toml-reader           >=0.2.0.0  && <0.3

  hs-source-dirs:   exe-internal
  default-language: Haskell2010

executable time-conv
  import:           common-lang
  main-is:          Main.hs
  build-depends:
    , base
    , effectful-core
    , exceptions-effectful
    , fs-effectful
    , optparse-effectful
    , terminal-effectful
    , time-conv-exe-internal
    , time-effectful

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010

  -- NOTE: Doctest disabled as it depends on GHC as a library, which is
  -- apparently a problem if we want to use any boot libraries with a different
  -- version than GHC's dependencies. Since we want to use the new AFP (requires
  -- filepath > 1.4.100), this conflicts with using GHC.
  --
  -- Rather than give up on older GHCs with filepath < 1.4.100, we give up on
  -- doctest for now.
  --
  -- test-suite doctest
  --   import:           common-lang
  --   type:             exitcode-stdio-1.0
  --   main-is:          Main.hs
  --   build-depends:
  --     , base
  --     , doctest    >=0.16.3 && <0.23
  --     , env-guard  ^>=0.2

  hs-source-dirs:   test/doctest
  default-language: Haskell2010

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Props.Generators
    Unit.Data.Time.Conversion
    Unit.Data.Time.Conversion.Internal
    Unit.Data.Time.Conversion.Types.Date
    Unit.Utils

  build-depends:
    , base
    , deepseq
    , effectful-core
    , exceptions-effectful
    , fs-effectful
    , hedgehog              >=1.0.2   && <1.5
    , optics-core
    , optparse-effectful
    , tasty                 >=1.1.0.3 && <1.5
    , tasty-hedgehog        >=1.0.1.0 && <1.5
    , tasty-hunit           >=0.9     && <0.11
    , terminal-effectful
    , text
    , time
    , time-conv
    , time-effectful
    , tz

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010

test-suite functional
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , effectful
    , exceptions-effectful
    , fs-effectful
    , ioref-effectful         ^>=0.1
    , optics-core
    , optparse-effectful
    , tasty
    , tasty-hunit
    , text
    , time
    , time-conv
    , time-conv-exe-internal
    , time-effectful

  hs-source-dirs:   test/functional
  default-language: Haskell2010
