cabal-version:      2.4
name:               time-conv
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/time-conv/
bug-reports:        https://github.com/tbidne/time-conv/issues
synopsis:           A utility program for converting between timezones.
description:
  A utility program for converting between timezones.
  Please see the README at https://github.com/tbidne/time-conv/#readme

category:           Time, Shell scripting
extra-source-files:
  CHANGELOG.md
  examples/config.toml
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/time-conv

common common-lang
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Data.Time.Conversion
    Data.Time.Conversion.Internal
    Data.Time.Conversion.Types.Date
    Data.Time.Conversion.Types.Date.Internal
    Data.Time.Conversion.Types.Exception
    Data.Time.Conversion.Types.TimeFormat
    Data.Time.Conversion.Types.TimeReader
    Data.Time.Conversion.Types.TZDatabase

  build-depends:
    , base             >=4.14.0.0 && <4.21
    , containers       >=0.6.3.1  && <0.8
    , deepseq          >=1.4.4.0  && <1.6
    , effects-time     ^>=0.1
    , exception-utils  ^>=0.1
    , exceptions       ^>=0.10.4
    , optics-core      ^>=0.4
    , text             >=1.2.3.2  && <2.2
    , time             >=1.9.3    && <1.15
    , tz               ^>=0.1.3.3

  hs-source-dirs:  src

library time-conv-runner
  import:          common-lang
  other-modules:   Paths_time_conv
  autogen-modules: Paths_time_conv
  exposed-modules:
    TimeConv.Runner
    TimeConv.Runner.Args
    TimeConv.Runner.Toml

  build-depends:
    , base
    , containers
    , effects-fs            ^>=0.1
    , effects-optparse      ^>=0.1
    , effects-terminal      ^>=0.1
    , effects-time
    , exceptions
    , optics-core
    , optics-th             ^>=0.4
    , optparse-applicative  >=0.16.1.0 && <0.19
    , text
    , time
    , time-conv
    , toml-reader           >=0.2.0.0  && <0.3

  hs-source-dirs:  runner

executable time-conv
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , exception-utils
    , time-conv
    , time-conv-runner

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Props.Generators
    Unit.Data.Time.Conversion
    Unit.Data.Time.Conversion.Internal
    Unit.Data.Time.Conversion.Types.Date
    Unit.Utils

  build-depends:
    , base
    , deepseq
    , exception-utils
    , hedgehog         >=1.0.2   && <1.5
    , optics-core
    , tasty            >=1.1.0.3 && <1.6
    , tasty-hedgehog   >=1.0.1.0 && <1.5
    , tasty-hunit      >=0.9     && <0.11
    , text
    , time
    , time-conv
    , tz

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Params
  build-depends:
    , base
    , effects-env       ^>=0.1
    , effects-fs
    , effects-ioref     ^>=0.1
    , effects-optparse
    , effects-terminal
    , effects-time
    , exceptions
    , mtl               >=2.2.2 && <2.4
    , optics-core
    , tasty
    , tasty-hunit
    , text
    , time
    , time-conv
    , time-conv-runner

  hs-source-dirs: test/functional
